--- a/VirtualChestMod/resources/assets/ftbvirtualchest/lang/en_US.lang
+++ b/VirtualChestMod/resources/assets/ftbvirtualchest/lang/en_US.lang
@@ -1,2 +1,19 @@
 tile.ftbvirtualchest:VirtualChest.name=Virtual Chest
 tile.ftbvirtualchest:VirtualStorage.name=Virtual Storage
+ftb.teamname.0=Team White
+ftb.teamname.1=Team Orange
+ftb.teamname.2=Team Magneta
+ftb.teamname.3=Team Light Blue
+ftb.teamname.4=Team Yellow
+ftb.teamname.5=Team Lime
+ftb.teamname.6=Team Pink
+ftb.teamname.7=Team Grey
+ftb.teamname.8=Team Light Grey
+ftb.teamname.9=Team Cyan
+ftb.teamname.10=Team Purple
+ftb.teamname.11=Team Blue
+ftb.teamname.12=Team Brown
+ftb.teamname.13=Team Green
+ftb.teamname.14=Team Red
+ftb.teamname.15=Team Black
+ftb.teamname.-1=No Team
